--- a/index.html
+++ b/index.html
@@ -1,40 +1,28 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-<meta charset="UTF-8">
-<title>مملكة الأصليات - شركة جنة</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-body { font-family: Tahoma; margin:0; padding:0; background:#f9f9f9; text-align:center; }
-.top-bar { background:#ffd54f; color:#000; font-weight:bold; padding:8px; font-size:1em; }
-.blink { color:#8a2be2; font-size:1.3em; font-weight:bold; padding:10px; }
-header { background:#8a2be2; color:#fff; padding:25px 10px; }
-header h1 { margin:0; font-size:2.2em; font-weight:bold; }
-header h2 { margin:5px 0 0; font-size:1.2em; font-weight:normal; }
-
-/* الصور */
-.top-images { display:flex; justify-content:center; gap:10px; margin:15px 0; }
-.top-images img { width:120px; height:auto; border-radius:10px; }
-
 /* أزرار أعلى الصفحة */
-.top-buttons { display:flex; flex-wrap:wrap; justify-content:center; margin:15px 0; gap:10px; }
-.top-buttons button { padding:12px 18px; font-size:1em; font-weight:bold; border:none; border-radius:8px; background:#8a2be2; color:#fff; cursor:pointer; transition:0.3s; }
-.top-buttons button:hover { background:#6a1fbf; transform:scale(1.05); }
+.top-buttons { 
+  display:flex; 
+  flex-wrap:wrap; 
+  justify-content:center; 
+  margin:15px 0; 
+  gap:10px; 
+}
 
-/* مربع المعلومات */
-.info-box { display:none; background:#fff; margin:15px auto; padding:20px; border-radius:12px; max-width:400px; text-align:center; box-shadow:0 2px 10px rgba(0,0,0,0.2); }
+.top-buttons button { 
+  padding:14px 20px;       /* زيادة مساحة الزر */
+  font-size:1.25em;        /* تكبير الخط */
+  font-weight:bold;         /* تثقيل الخط */
+  border:none; 
+  border-radius:8px; 
+  background:#8a2be2; 
+  color:#fff; 
+  cursor:pointer; 
+  transition:0.3s; 
+}
 
-/* نموذج التسجيل */
-.form-container { max-width:400px; margin:20px auto; background:#fff; padding:20px; border-radius:15px; box-shadow:0 2px 10px rgba(0,0,0,0.1); text-align:right; font-weight:bold; }
-.form-container h3 { text-align:center; color:#8a2be2; margin-bottom:15px; }
-.form-container input, .form-container select { width:100%; padding:12px; margin:10px 0; border-radius:8px; border:1px solid #ccc; font-size:1em; }
-.form-container button { width:100%; padding:12px; border:none; border-radius:10px; font-size:1.1em; font-weight:bold; cursor:pointer; color:#fff; background:#8a2be2; transition:0.3s; }
-.form-container button:hover { background:#6a1fbf; transform:scale(1.02); }
-
-/* مودال نجاح التسجيل */
-.modal { display:none; position:fixed; z-index:1000; left:0; top:0; width:100%; height:100%; background:rgba(0,0,0,0.6); align-items:center; justify-content:center; }
-.modal-content { background:#fff; padding:20px; border-radius:12px; width:90%; max-width:400px; text-align:center; }
-.modal-content h2 { color:#8a2be2; margin-bottom:15px; }
+.top-buttons button:hover { 
+  background:#6a1fbf; 
+  transform:scale(1.05); 
+}
 
 /* مربع كلمة السر يظهر على الصفحة */
 .password-box { display:none; position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); background:#fff; padding:25px; border-radius:12px; max-width:400px; width:90%; box-shadow:0 2px 15px rgba(0,0,0,0.3); text-align:center; z-index:1001; font-weight:bold; }
@@ -188,6 +176,7 @@ function closeModal(){ successModal.style.display='none'; }
 
 </body>
 </html>
+
 
 
 
