--- a/products.html
+++ b/products.html
@@ -5,150 +5,308 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>جميع منتجات جنة</title>
 <style>
-body { font-family: Tahoma,sans-serif; margin:0; background:#f9f9f9; }
-header { background:#131921; color:white; padding:15px; text-align:center; font-size:20px; font-weight:bold; position:sticky; top:0; z-index:1000; }
-.header-buttons { margin-top:10px; display:flex; flex-wrap:wrap; justify-content:center; gap:5px; position:relative; }
-.header-buttons button { background:#ffd814; border:1px solid #fcd200; padding:6px 12px; border-radius:6px; cursor:pointer; font-weight:bold; position:relative; }
-.header-buttons button:hover { background:#f7ca00; }
-#notifBtn { background:#ff4444; border:1px solid #cc0000; color:#fff; }
-#notif-count { position:absolute; top:-10px; right:-10px; background:yellow; color:black; font-size:12px; font-weight:bold; padding:2px 6px; border-radius:50%; display:none; z-index:1001; }
-#newBanner { display:none; background:red; color:white; text-align:center; padding:10px; font-size:20px; font-weight:bold; }
-#cart-count { position:absolute; top:-10px; right:-10px; background:red; color:#fff; font-size:12px; font-weight:bold; padding:2px 6px; border-radius:50%; display:none; z-index:1001; }
-#searchBox { position:sticky; top:70px; display:block; margin:10px auto; padding:10px; width:90%; max-width:400px; border-radius:8px; border:1px solid #ccc; font-size:16px; box-shadow:0 1px 4px rgba(0,0,0,0.1); z-index:999; }
-#products-container { display:grid; grid-template-columns:repeat(auto-fill,minmax(160px,1fr)); gap:12px; padding:15px; }
-.product { border:1px solid #ccc; border-radius:10px; padding:10px; text-align:center; background:#fff; box-shadow:0 2px 5px rgba(0,0,0,0.1); transition:0.3s; }
-.product:hover { box-shadow:0 4px 12px rgba(0,0,0,0.2); }
-.product img { width:100%; height:150px; object-fit:contain; margin-bottom:8px; }
-.name { font-size:16px; margin:5px 0; color:#333; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
-.price { font-weight:bold; margin-bottom:5px; }
-.product input { width:50px; margin:5px 0; border-radius:5px; border:1px solid #ccc; text-align:center; }
-.product button { padding:5px 10px; border:none; border-radius:5px; background:#8a2be2; color:#fff; cursor:pointer; font-weight:bold; transition:0.3s; }
-.product button:hover { background:#6a1fbf; transform:scale(1.05); }
+body { font-family: Tahoma, sans-serif; margin:0; background:#f9f9f9; }
 
-#totalModal { display:none; position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); background:#fff; padding:20px; border-radius:15px; box-shadow:0 3px 15px rgba(0,0,0,0.3); text-align:center; z-index:1002; width:90%; max-width:600px; max-height:80%; overflow-y:auto; }
-#totalModal h2 { font-size:20px; margin-bottom:15px; color:#8a2be2; }
-#totalModal button { margin:5px; padding:8px 15px; border:none; border-radius:10px; background:#8a2be2; color:#fff; cursor:pointer; font-weight:bold; transition:0.3s; }
-#totalModal button:hover { background:#6a1fbf; }
-#cartList { text-align:right; margin-bottom:10px; display:flex; flex-direction:column; gap:5px; }
-
-.cart-item {
-    display: grid;
-    grid-template-columns: 3fr 1fr 1fr 1fr auto;
-    align-items: center;
-    padding: 5px 10px;
-    border-bottom: 1px solid #ccc;
-    gap: 5px;
+/* الهيدر */
+header {
+  background: #131921;
+  color: white;
+  padding: 15px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
 }
-.cart-item span, .cart-item input, .cart-item button { text-align: center; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; }
-.cart-item span:first-child { text-align: right; }
-.cart-item input { width:60px; }
-.cart-item button { padding:5px 10px; background:#ff4444; color:#fff; border:none; border-radius:5px; cursor:pointer; }
-.cart-item button:hover { background:#cc0000; }
+.header-buttons { margin-top: 10px; display: flex; flex-wrap: wrap; justify-content: center; gap:5px;}
+.header-buttons button {
+  background: #ffd814;
+  border: 1px solid #fcd200;
+  padding: 6px 12px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: bold;
+}
+.header-buttons button:hover { background: #f7ca00; }
 
-#orderNumbers a { display:block; margin:5px 0; font-size:16px; color:#8a2be2; font-weight:bold; text-decoration:none; }
-#orderNumbers a:hover { color:#6a1fbf; text-decoration:underline; }
-#toast { position:fixed; bottom:20px; right:20px; background:#25d366; color:#fff; padding:10px 20px; border-radius:10px; box-shadow:0 2px 5px rgba(0,0,0,0.3); display:none; z-index:1003; }
+/* زر الجرس */
+#notifBtn {
+  position: relative;
+  background: #ff4444;
+  border: 1px solid #cc0000;
+  padding: 6px 12px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: bold;
+  color: #fff;
+}
+#notif-count {
+  position: absolute;
+  top: -8px;
+  right: -8px;
+  background: yellow;
+  color: black;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 2px 6px;
+  border-radius: 50%;
+  display: none;
+}
+
+/* بانر المنتج الجديد */
+#newBanner {
+  display: none;
+  background: red;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+/* عداد السلة */
+#cart-count {
+  position: absolute;
+  top: -8px;
+  right: -8px;
+  background: red;
+  color: #fff;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 2px 6px;
+  border-radius: 50%;
+  display: none;
+}
+
+/* مربع البحث */
+#searchBox {
+  display: block;
+  margin: 15px auto;
+  padding: 10px;
+  width: 90%;
+  max-width: 400px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+  box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+}
+
+/* المنتجات */
+#products-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+  gap: 12px;
+  padding: 15px;
+}
+.product {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 10px;
+  text-align: center;
+  background: #fff;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  transition: 0.3s;
+}
+.product:hover { box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
+.product img {
+  width: 100%;
+  height: 120px;
+  object-fit: contain;
+  margin-bottom: 8px;
+}
+.name { font-size: 16px; margin: 5px 0; color: #333; }
+.price { font-weight: bold; margin-bottom: 5px; }
+.product input { width: 50px; margin: 5px 0; border-radius: 5px; border: 1px solid #ccc; text-align: center; }
+.product button {
+  padding: 5px 10px;
+  border: none;
+  border-radius: 5px;
+  background: #8a2be2;
+  color: #fff;
+  cursor: pointer;
+  font-weight: bold;
+  transition: 0.3s;
+}
+.product button:hover { background: #6a1fbf; transform: scale(1.05); }
+
+/* نافذة اجمالي الفاتورة */
+#totalModal {
+  display: none;
+  position: fixed;
+  top: 50%; left: 50%;
+  transform: translate(-50%,-50%);
+  background: #fff;
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 0 3px 15px rgba(0,0,0,0.3);
+  text-align: center;
+  z-index: 1002;
+  width: 90%;
+  max-width: 400px;
+  max-height: 80%;
+  overflow-y: auto;
+}
+#totalModal h2 {
+  font-size: 20px;
+  margin-bottom: 15px;
+  color: #8a2be2;
+}
+#totalModal button {
+  margin: 5px;
+  padding: 8px 15px;
+  border: none;
+  border-radius: 10px;
+  background: #8a2be2;
+  color: #fff;
+  cursor: pointer;
+  font-weight: bold;
+  transition: 0.3s;
+}
+#totalModal button:hover { background: #6a1fbf; }
+
+/* قائمة السلة */
+#cartList { text-align: right; margin-bottom: 10px; }
+.cart-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #ccc;
+  padding: 5px 0;
+}
+.cart-item span { margin: 0 5px; }
+.cart-item button { padding: 2px 8px; font-size: 14px; }
+
+/* الأرقام تحت بعض */
+#orderNumbers a {
+  display: block;
+  margin: 5px 0;
+  font-size: 16px;
+  color: #8a2be2;
+  font-weight: bold;
+  text-decoration: none;
+}
+#orderNumbers a:hover { color: #6a1fbf; text-decoration: underline; }
+
+/* Toast */
+#toast {
+  position: fixed;
+  bottom: 20px; right: 20px;
+  background: #25d366;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+  display: none;
+  z-index: 1003;
+}
 </style>
 </head>
 <body>
 
 <header>
-📦 جميع منتجات جنة
-<div class="header-buttons">
-  <button id="cartBtn">🛒 السلة <span id="cart-count">0</span></button>
-  <button id="totalBtn">💰 إجمالي الفاتورة</button>
-  <button id="supportBtn">☎️ الدعم الفني</button>
-  <button onclick="window.location.href='index.html'">🔙 القائمة الرئيسية</button>
-  <button id="notifBtn">🔔 <span id="notif-count">0</span></button>
-</div>
-<input type="text" id="searchBox" placeholder="🔍 ابحث عن منتج...">
+  📦 جميع منتجات جنة
+  <div class="header-buttons">
+    <button id="cartBtn">🛒 السلة <span id="cart-count">0</span></button>
+    <button id="totalBtn">💰 إجمالي الفاتورة</button>
+    <button id="supportBtn">☎️ الدعم الفني</button>
+    <button onclick="window.location.href='index.html'">🔙 القائمة الرئيسية</button>
+    <button id="notifBtn">🔔 <span id="notif-count">0</span></button>
+  </div>
+  <input type="text" id="searchBox" placeholder="🔍 ابحث عن منتج...">
 </header>
 
 <div id="newBanner">🎉 منتجات جديدة اليوم!</div>
 <div id="products-container"></div>
 
 <div id="totalModal">
-<h2>إجمالي الفاتورة: <span id="totalAmount">0</span> جنيه</h2>
-<div id="cartList"></div>
-<div style="display:flex; justify-content:center; gap:10px; margin-top:10px;">
+  <h2>إجمالي الفاتورة: <span id="totalAmount">0</span> جنيه</h2>
+  <div id="cartList"></div>
   <button id="sendBtn">📤 إرسال عبر واتساب</button>
   <button onclick="closeTotalModal()">❌ إغلاق</button>
-</div>
-<div id="orderNumbers" style="margin-top:10px; display:none;">
-<p>اختر رقم لإرسال الطلب 👇</p>
-<a href="https://wa.me/201067070423" target="_blank">📞 01067070423</a>
-<a href="https://wa.me/201022495795" target="_blank">📞 01022495795</a>
-<a href="https://wa.me/201012253500" target="_blank">📞 01012253500</a>
-</div>
+  <div id="orderNumbers" style="margin-top:10px; display:none;">
+    <p>اختر رقم لإرسال الطلب 👇</p>
+    <a href="https://wa.me/201067070423" target="_blank">📞 01067070423</a>
+    <a href="https://wa.me/201022495795" target="_blank">📞 01022495795</a>
+    <a href="https://wa.me/201012253500" target="_blank">📞 01012253500</a>
+  </div>
 </div>
 
 <div id="toast">تمت الإضافة إلى السلة</div>
 
-<script>
-const SCRIPT_PRODUCTS_URL = "https://script.google.com/macros/s/AKfycbwXSzIQdSsMbnVVOxjC6aipoDdCfUR5A8VO6MGT8pi_9ho92fLrrOqqPAJDaeN_fdlCVg/exec";
-let productsData = [], cart=[];
+<script defer>
+const SCRIPT_PRODUCTS_URL = "https://script.google.com/macros/s/AKfycbxW3_pcjSfffMTLZefZpzFIrbhijiaWY_u_4ZAmXEV2O04SMN5zplucKnAugWWbP8zzmA/exec";
+const container = document.getElementById("products-container");
+let productsData = [];
+let cart = [];
 
-const container=document.getElementById("products-container");
-
+// عرض المنتجات
 function renderProducts(data){
-  let html="";
+  let html = "";
   for(let i=0;i<data.length;i++){
-      const item=data[i];
-      html+=`<div class="product">
-                <img src="${item.image || 'https://via.placeholder.com/150'}">
-                <div class="name" title="${item.name}">${item.name}</div>
-                <div class="price">السعر: ${item.price} جنيه</div>
-                <input type="number" min="1" value="1" data-index="${i}">
-                <button onclick="addToCart(${i})">أضف إلى السلة</button>
-             </div>`;
+      const item = data[i];
+      html += `<div class="product">
+                  <img src="${item.image || 'https://via.placeholder.com/150'}">
+                  <div class="name">${item.name}</div>
+                  <div class="price">السعر: ${item.price} جنيه</div>
+                  <input type="number" min="1" value="1" data-index="${i}">
+                  <button onclick="addToCart(${i})">أضف إلى السلة</button>
+               </div>`;
   }
-  container.innerHTML=html;
+  container.innerHTML = html;
 }
 
-// ✅ تحميل المنتجات
+// تحميل سريع للمنتجات
 (async function(){
-  if(localStorage.getItem("products")){
-    productsData=JSON.parse(localStorage.getItem("products"));
-    renderProducts(productsData);
-  }
-  try{
-    const res=await fetch(SCRIPT_PRODUCTS_URL,{cache:"no-store"});
-    const data=await res.json();
-    productsData=data.reverse();
-    localStorage.setItem("products",JSON.stringify(productsData));
-    renderProducts(productsData);
-  }catch(err){ console.log("❌ خطأ في جلب المنتجات:",err);}
-  loadCart(); // ✅ استرجاع السلة بعد تحميل المنتجات
+   if(localStorage.getItem("products")){
+      productsData = JSON.parse(localStorage.getItem("products"));
+      renderProducts(productsData);
+   }
+   try {
+     const res = await fetch(SCRIPT_PRODUCTS_URL, {cache:"no-store"});
+     const data = await res.json();
+     productsData = data.reverse();
+     localStorage.setItem("products", JSON.stringify(productsData));
+     renderProducts(productsData);
+     setTimeout(checkNewProducts, 1500);
+   } catch(err){ console.log("❌ خطأ في جلب المنتجات:",err); }
 })();
 
-function showToast(msg){ const toast=document.getElementById("toast"); toast.innerText=msg; toast.style.display="block"; setTimeout(()=>toast.style.display="none",1200); }
-function updateCartCount(){ const count=cart.reduce((sum,qty)=>qty?sum+qty:sum,0); const badge=document.getElementById("cart-count"); if(count>0){badge.style.display="inline-block"; badge.innerText=count;}else badge.style.display="none"; }
+function showToast(msg){
+  const toast = document.getElementById("toast");
+  toast.innerText = msg;
+  toast.style.display = "block";
+  setTimeout(()=>toast.style.display="none",1200);
+}
 
-// ✅ حفظ السلة
-function saveCart(){ localStorage.setItem("cart", JSON.stringify(cart)); }
-// ✅ استرجاع السلة
-function loadCart(){ const saved=localStorage.getItem("cart"); if(saved){ cart=JSON.parse(saved); updateCartCount(); } }
+function updateCartCount(){
+  const count = cart.reduce((sum, qty)=> qty ? sum+qty : sum, 0);
+  const badge = document.getElementById("cart-count");
+  badge.style.display = count>0?"inline-block":"none";
+  badge.innerText = count;
+}
 
-function addToCart(index){ const input=document.querySelector(`input[data-index='${index}']`); const qty=parseInt(input.value); if(qty<=0) return; cart[index]=(cart[index]||0)+qty; updateCartCount(); saveCart(); showToast(`${productsData[index].name} تم إضافته/تحديثه في السلة`); }
+function addToCart(index){
+  const input = container.querySelector(`input[data-index='${index}']`);
+  const quantity = parseInt(input.value);
+  if(quantity<=0) return;
+  cart[index] = (cart[index] || 0) + quantity;
+  updateCartCount();
+  showToast(`${productsData[index].name} تم إضافته/تحديثه في السلة`);
+}
 
 function showTotal(){
   let total=0;
   const cartList=document.getElementById("cartList");
   cartList.innerHTML="";
-  const header=document.createElement("div");
-  header.className="cart-item"; header.style.fontWeight="bold";
-  header.innerHTML=`<span>الاسم</span><span>الكمية</span><span>السعر</span><span>الإجمالي</span><span></span>`;
-  cartList.appendChild(header);
-
   cart.forEach((qty,idx)=>{
     if(qty){
-      const lineTotal=qty*productsData[idx].price;
-      total+=lineTotal;
-      const div=document.createElement("div"); div.className="cart-item";
-      div.innerHTML=`<span title="${productsData[idx].name}">${productsData[idx].name}</span>
-                     <span><input type="number" min="1" value="${qty}" onchange="updateQty(${idx},this.value)"></span>
-                     <span>${productsData[idx].price}</span>
-                     <span>${lineTotal}</span>
+      total+=qty*productsData[idx].price;
+      const div=document.createElement("div");
+      div.className="cart-item";
+      div.innerHTML=`<span>${productsData[idx].name}</span>
+                     <span>السعر: ${productsData[idx].price} × 
+                     <input type="number" min="1" value="${qty}" style="width:40px;" onchange="updateQty(${idx},this.value)"> = <strong>${productsData[idx].price*qty}</strong> جنيه</span>
                      <button onclick="removeItem(${idx})">حذف</button>`;
       cartList.appendChild(div);
     }
@@ -157,36 +315,58 @@ function showTotal(){
   document.getElementById("totalModal").style.display="block";
 }
 
-function updateQty(idx,value){ value=parseInt(value); if(value<=0) delete cart[idx]; else cart[idx]=value; updateCartCount(); saveCart(); showTotal(); }
-function removeItem(idx){ delete cart[idx]; updateCartCount(); saveCart(); showTotal(); }
+function updateQty(idx,value){ value=parseInt(value); if(value<=0) delete cart[idx]; else cart[idx]=value; updateCartCount(); showTotal(); }
+function removeItem(idx){ delete cart[idx]; updateCartCount(); showTotal(); }
 function closeTotalModal(){ document.getElementById("totalModal").style.display='none'; }
 
-// ✅ إرسال منظم للواتساب
-document.getElementById("sendBtn").onclick=function(){
-  const orderDiv=document.getElementById("orderNumbers");
+// دالة إرسال الطلب بالشكل المطلوب
+document.getElementById("sendBtn").onclick = function(){
+  const orderDiv = document.getElementById("orderNumbers");
   orderDiv.style.display="block";
   orderDiv.querySelectorAll("a").forEach(a=>{
     a.onclick=(e)=>{
       e.preventDefault();
-      let text="🧾 *طلبية جديدة* %0A%0A"; let total=0;
-      cart.forEach((qty, idx)=>{
+      let text="طلبية:%0A%0A";
+      let total=0;
+      cart.forEach((qty,idx)=>{
         if(qty){
-          const price=productsData[idx].price;
-          const lineTotal=qty*price;
+          const lineTotal=qty*productsData[idx].price;
           total+=lineTotal;
-          text+=`• ${productsData[idx].name}%0A   الكمية: ${qty} × ${price} = ${lineTotal} جنيه%0A%0A`;
+          text+=`${productsData[idx].name} × ${qty} = ${lineTotal} جنيه%0A`;
         }
       });
-      text+=`💰 *المجموع الكلي:* ${total} جنيه`;
+      text+=`%0Aالمجموع الكلي: ${total} جنيه`;
       window.open(`${a.href}?text=${text}`,"_blank");
     }
   });
 }
 
+// أزرار الهيدر
 document.getElementById("cartBtn").onclick=showTotal;
 document.getElementById("totalBtn").onclick=showTotal;
 document.getElementById("supportBtn").onclick=()=>window.open("https://wa.me/201022495795","_blank");
-document.getElementById("searchBox").addEventListener("input",function(){ const keyword=this.value.trim().toLowerCase(); renderProducts(productsData.filter(p=>p.name.toLowerCase().includes(keyword))); });
+
+// إشعارات المنتجات الجديدة
+function checkNewProducts(){
+  const today=(new Date()).toISOString().split("T")[0];
+  let newCount=0;
+  productsData.forEach(p=>{ if(p.date&&p.date.startsWith(today)) newCount++; });
+  if(newCount>0){
+    document.getElementById("notif-count").innerText=newCount;
+    document.getElementById("notif-count").style.display="inline-block";
+    document.getElementById("newBanner").style.display="block";
+    let audio=new Audio("https://www.soundjay.com/buttons/sounds/button-3.mp3"); audio.play();
+    if(Notification.permission==="granted") new Notification(`تم إضافة ${newCount} منتجات جديدة اليوم 🎉`);
+    else if(Notification.permission!=="denied") Notification.requestPermission().then(p=>{ if(p==="granted") new Notification(`تم إضافة ${newCount} منتجات جديدة اليوم 🎉`); });
+  }
+}
+
+// البحث
+document.getElementById("searchBox").addEventListener("input", function(){
+  const keyword=this.value.trim().toLowerCase();
+  const filtered=productsData.filter(p=>p.name.toLowerCase().includes(keyword));
+  renderProducts(filtered);
+});
 </script>
 </body>
 </html>
