--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>جميع منتجات جنة</title>
 <style>
-body { font-family: Tahoma,sans-serif; margin:0; background:#f3e5ff; }
+body { font-family: Tahoma,sans-serif; margin:0; background:#f9f9f9; }
 
 /* الهيدر */
 header {
@@ -19,49 +19,28 @@ header {
   top: 0;
   z-index: 1000;
 }
-
-/* زر السلة فوق */
-#cartBtn {
-  background: #8a2be2;
-  border: none;
-  padding: 8px 15px;
-  border-radius: 8px;
-  cursor: pointer;
-  color: #fff;
-  font-weight: bold;
-  font-size: 16px;
-  margin-bottom: 10px;
-  position: relative;
-}
-#cart-count {
-  position: absolute;
-  top: -8px;
-  right: -8px;
-  background: red;
-  color: #fff;
-  font-size: 12px;
-  font-weight: bold;
-  padding: 2px 6px;
-  border-radius: 50%;
-  display: none;
-}
-
-/* أزرار الهيدر الأخرى */
 .header-buttons { margin-top: 10px; display: flex; flex-wrap: wrap; justify-content: center; gap:5px;}
 .header-buttons button {
-  background: #8a2be2;
-  border: none;
+  background: #ffd814;
+  border: 1px solid #fcd200;
+  padding: 6px 12px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: bold;
+}
+.header-buttons button:hover { background: #f7ca00; }
+
+/* زر الجرس */
+#notifBtn {
+  position: relative;
+  background: #ff4444;
+  border: 1px solid #cc0000;
   padding: 6px 12px;
   border-radius: 6px;
   cursor: pointer;
   font-weight: bold;
   color: #fff;
-  transition: 0.3s;
 }
-.header-buttons button:hover { background: #6a1fbf; }
-
-/* زر الجرس */
-#notifBtn { position: relative; }
 #notif-count {
   position: absolute;
   top: -8px;
@@ -86,6 +65,20 @@ header {
   font-weight: bold;
 }
 
+/* عداد السلة */
+#cart-count {
+  position: absolute;
+  top: -8px;
+  right: -8px;
+  background: red;
+  color: #fff;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 2px 6px;
+  border-radius: 50%;
+  display: none;
+}
+
 /* مربع البحث */
 #searchBox {
   display: block;
@@ -99,34 +92,41 @@ header {
   box-shadow: 0 1px 4px rgba(0,0,0,0.1);
 }
 
-/* المنتجات */
+/* منتجات على شكل كروت أمازون */
 #products-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
   gap: 15px;
   padding: 15px;
 }
 .product {
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  padding: 10px;
-  text-align: center;
   background: #fff;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   transition: 0.3s;
 }
-.product:hover { box-shadow: 0 4px 12px rgba(0,0,0,0.2); }
+.product:hover { box-shadow: 0 5px 15px rgba(0,0,0,0.3); }
 .product img {
   width: 100%;
-  height: 130px;
+  height: 150px;
   object-fit: contain;
-  margin-bottom: 8px;
+  background: #f9f9f9;
 }
-.name { font-size: 16px; margin: 5px 0; color: #333; }
-.price { font-weight: bold; margin-bottom: 5px; }
-.product input { width: 50px; margin: 5px 0; border-radius: 5px; border: 1px solid #ccc; text-align: center; }
+.product-info {
+  padding: 10px;
+  text-align: center;
+}
+.product-info .name { font-size: 16px; margin-bottom: 5px; color: #333; font-weight: bold; }
+.product-info .price { font-size: 14px; color: #8a2be2; margin-bottom: 8px; }
+.product input {
+  width: 50px; margin: 5px 0; border-radius: 5px; border: 1px solid #ccc; text-align: center;
+}
 .product button {
-  padding: 5px 10px;
+  padding: 8px 10px;
   border: none;
   border-radius: 5px;
   background: #8a2be2;
@@ -154,11 +154,7 @@ header {
   max-height: 85%;
   overflow-y: auto;
 }
-#totalModal h2 {
-  font-size: 20px;
-  margin-bottom: 15px;
-  color: #8a2be2;
-}
+#totalModal h2 { font-size: 20px; margin-bottom: 15px; color: #8a2be2; }
 #totalModal button {
   margin: 5px;
   padding: 8px 15px;
@@ -212,7 +208,7 @@ header {
 /* تحسين الموبايل */
 @media (max-width: 600px){
   #products-container { grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); }
-  .product img { height: 100px; }
+  .product img { height: 120px; }
 }
 </style>
 </head>
@@ -220,10 +216,8 @@ header {
 
 <header>
   📦 جميع منتجات جنة
-  <div style="text-align:center;">
-    <button id="cartBtn">🛒 السلة <span id="cart-count">0</span></button>
-  </div>
   <div class="header-buttons">
+    <button id="cartBtn">🛒 السلة <span id="cart-count">0</span></button>
     <button id="totalBtn">💰 إجمالي الفاتورة</button>
     <button id="supportBtn">☎️ الدعم الفني</button>
     <button onclick="window.location.href='index.html'">🔙 القائمة الرئيسية</button>
@@ -263,10 +257,12 @@ function renderProducts(data){
       const item = data[i];
       html += `<div class="product">
                   <img src="${item.image || 'https://via.placeholder.com/150'}">
-                  <div class="name">${item.name}</div>
-                  <div class="price">السعر: ${item.price} جنيه</div>
-                  <input type="number" min="1" value="1" data-index="${i}">
-                  <button onclick="addToCart(${i})">أضف إلى السلة</button>
+                  <div class="product-info">
+                    <div class="name">${item.name}</div>
+                    <div class="price">${item.price} جنيه</div>
+                    <input type="number" min="1" value="1" data-index="${i}">
+                    <button onclick="addToCart(${i})">أضف إلى السلة</button>
+                  </div>
                </div>`;
   }
   container.innerHTML = html;
@@ -324,8 +320,8 @@ function showTotal(){
       div.className="cart-item";
       div.innerHTML=`<span>${productsData[idx].name}</span>
                      <span>الكمية: <input type="number" min="1" value="${qty}" style="width:50px;" onchange="updateQty(${idx},this.value)"></span>
-                     <span>السعر: ${price} ج</span>
-                     <span>الإجمالي: <strong>${lineTotal}</strong> ج</span>
+                     <span>السعر: ${price}</span>
+                     <span>الإجمالي: ${lineTotal}</span>
                      <button onclick="removeItem(${idx})">حذف</button>`;
       cartList.appendChild(div);
     }
@@ -338,7 +334,6 @@ function updateQty(idx,value){ value=parseInt(value); if(value<=0) delete cart[i
 function removeItem(idx){ delete cart[idx]; updateCartCount(); showTotal(); }
 function closeTotalModal(){ document.getElementById("totalModal").style.display='none'; }
 
-// إرسال الواتساب بنفس تنسيق الفاتورة
 document.getElementById("sendBtn").onclick = function(){
   const orderDiv = document.getElementById("orderNumbers");
   orderDiv.style.display="block";
@@ -346,10 +341,8 @@ document.getElementById("sendBtn").onclick = function(){
     a.onclick=(e)=>{
       e.preventDefault();
       let text="🧾 طلبية جديدة\n\n";
-      text+="📦 المنتج | 🔢 الكمية | 💵 السعر | 📊 الإجمالي\n";
-      text+="--------------------------------\n";
       let total=0;
-      cart.forEach((qty, idx)=>{
+      cart.forEach((qty,idx)=>{
         if(qty){
           const price=productsData[idx].price;
           const lineTotal=qty*price;
@@ -357,19 +350,16 @@ document.getElementById("sendBtn").onclick = function(){
           text+=`${productsData[idx].name} | ${qty} | ${price} | ${lineTotal}\n`;
         }
       });
-      text+="--------------------------------\n";
-      text+=`✅ المجموع الكلي: ${total} جنيه`;
+      text+=`المجموع الكلي: ${total} جنيه`;
       window.open(`${a.href}?text=${encodeURIComponent(text)}`,"_blank");
     }
   });
 }
 
-// أزرار الهيدر
 document.getElementById("cartBtn").onclick=showTotal;
 document.getElementById("totalBtn").onclick=showTotal;
 document.getElementById("supportBtn").onclick=()=>window.open("https://wa.me/201022495795","_blank");
 
-// إشعارات المنتجات الجديدة
 function checkNewProducts(){
   const today=(new Date()).toISOString().split("T")[0];
   let newCount=0;
@@ -384,7 +374,6 @@ function checkNewProducts(){
   }
 }
 
-// البحث
 document.getElementById("searchBox").addEventListener("input", function(){
   const keyword=this.value.trim().toLowerCase();
   const filtered=productsData.filter(p=>p.name.toLowerCase().includes(keyword));
